modifiers window collapses correctly

--- a/CSS/page.css
+++ b/CSS/page.css
@@ -46,3 +46,7 @@
 
     flex-grow: 4;
 }
+
+#expanders {
+    display: inline-block;
+}
